--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,12 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="textStyle">
+        <item name="android:layout_weight">1</item>
+        <item name="android:textColor">#a2a6a6</item>
+        <item name="android:gravity">center</item>
+        <item name="android:button">@null</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
 </resources>
