--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -3,11 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.ygy.album.fragment.MyFragment">
+    tools:context="com.ygy.album.fragment.MyFragment"
+    android:fitsSystemWindows="false">
 <RelativeLayout
     android:id="@+id/view_top"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="200dp"
     android:background="@mipmap/my_background"
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
@@ -19,7 +20,7 @@
         app:riv_corner_radius="100dp"
         android:src="@mipmap/p1"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="50dp"/>
 <TextView
     android:id="@+id/tv_my_name"
     android:layout_width="wrap_content"
