--- a/app/src/main/res/layout/fragment_follow.xml
+++ b/app/src/main/res/layout/fragment_follow.xml
@@ -1,15 +1,22 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.ygy.album.fragment.FollowFragment"
     android:id="@+id/frame_follow">
+<android.support.design.widget.TabLayout
+    android:id="@+id/tab_follow"
+    android:layout_width="match_parent"
+    android:layout_height="40dp"
+    app:tabIndicatorColor="#494848"
+    app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
+    app:tabTextColor="?android:textColorSecondary"
+    app:tabSelectedTextColor="?android:textColorPrimary"/>
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="3"
-        />
-
-</FrameLayout>
+<android.support.v4.view.ViewPager
+    android:id="@+id/viewpager_follow"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_below="@id/tab_follow"/>
+</RelativeLayout>
