--- a/app/src/main/res/layout/item_followlist.xml
+++ b/app/src/main/res/layout/item_followlist.xml
@@ -13,6 +13,7 @@
     android:layout_centerVertical="true"
     android:layout_marginLeft="20dp"/>
     <TextView
+        android:id="@+id/item_follow_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18dp"
@@ -20,13 +21,21 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="20dp"
         tools:text="昵称"/>
-    <Button
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/item_follow_cancel"
+        android:layout_width="60dp"
         android:layout_height="30dp"
         android:textSize="12dp"
         android:textColor="#ffffff"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:text="@string/exit_follow"
-        android:background="@drawable/shape_btn_exit"/>
+        android:background="@drawable/shape_btn_exit"
+        android:layout_marginRight="10dp"
+        android:gravity="center"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#dcdcdc"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
